Implemented functionality for updating and deleting TodoLists
